# biomed-multi-omic

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml
.github/workflows/: pre-commit-check.yml  python-package.yml  test-cli.yml  test-inference-cli.yml
bmfm_targets/: README.md  README_SNP_PREPROCESSING.md  README_dna.md  __init__.py
bmfm_targets/config/: __init__.py  main_config.py  model_config.py  tokenization_config.py  training_config.py
bmfm_targets/datasets/: __init__.py  base_dna_dataset.py  base_perturbation_dataset.py  base_rna_dataset.py  dataset_transformer.py  datasets_utils.py  quality_control.py
bmfm_targets/datasets/SNPdb/: __init__.py  hic_binary_labels.json  hic_converter.py  hic_splitter.py  insulation_converter.py  insulation_splitter.py  parquet2litdata_token_label.py  snp_data_splitter.py  snp_token_label_splitter.py  streaming_snp_dataset.py  tabix_converter.py
bmfm_targets/datasets/anncollection/: __init__.py  anncollection_dataset.py  anncollection_dataset_index.ipynb  anncollection_dataset_index_w_lbl.ipynb
bmfm_targets/datasets/bulk_rna/: __init__.py  bulkrna_dataset.py
bmfm_targets/datasets/cellxgene/: README.md  __init__.py  cell_type_vocabulary.txt  celltypes_split.csv  celltypes_split_mouse.csv  cellxgene_all_labels.json  cellxgene_calculate_medians.py  cellxgene_dataset.py  cellxgene_dataset_split.ipynb  cellxgene_mouse_dataset_split.ipynb  cellxgene_nexus_dataset.py  cellxgene_nexus_index.ipynb  cellxgene_soma_dataset.py  cellxgene_soma_utils.py  cellxgene_splits.py  create_cellxgene_labels_json_file.py  (+2 more)
bmfm_targets/evaluation/: __init__.py  clearml_utils.py  embeddings.py  interpret.py  plots.py  predictions.py  utils.py
bmfm_targets/models/: __init__.py  model_utils.py
bmfm_targets/tasks/: __init__.py  task_utils.py
bmfm_targets/tests/: README.md  __init__.py  balanced_subsampling_of_h5ad_files.py  conftest.py  create_mock_data.ipynb  helpers.py  processed_final_dev.h5ad  test_attention.py  test_base_dataset.py  test_batch_prediction_metrics.py  test_configuration_scbert.py  test_dnaseqdm_seq_cls_training.py  test_inference_tasks.py  test_interpret.py  test_loss_tasks.py  test_main_config.py  test_masking.py  test_metrics.py  test_model_mlm_training.py  test_model_multitask_training.py  test_model_seq_cls_training.py  test_models.py  test_multifield_collator.py  test_multifield_instance.py  test_multifield_tokenizer.py  test_multifield_vocabulary.py  test_multitask_model.py  test_samplers.py  test_sc_transforms.py  test_serializers.py  test_tofrom_pretrained.py
bmfm_targets/tokenization/: __init__.py  convert_multifiled_tokenizer.py  load.py  multifield_collator.py  multifield_instance.py  multifield_tokenizer.py  multifield_vocabulary.py
bmfm_targets/training/: __init__.py  callbacks.py  data_module.py  masking.py  sample_transforms.py  serialization.py  streaming_datamodule.py
bmfm_targets/transforms/: __init__.py  build_gene_mapping_dict_from_source.ipynb  compose.py  protein_coding_gene_mapping_uppercase_hgnc_2024_08_23.json  sc_transforms.py
run/: README.md  config.yaml  dna_finetune_train_and_test_config.yaml  dna_predict.yaml  dnaeval_default.yaml  fine_tune_grl_train_config.yaml  fine_tune_train_and_test_config.yaml  fine_tune_train_and_test_config_epilepsy.yaml  fine_tune_train_config.yaml  finetune.yaml  mlm_train_config.yaml  multitask_config.yaml  multitask_train_config.yaml  perturbation_config.yaml  perturbation_train_config.yaml  pre_train_config.yaml  predict.yaml  predict_config.yaml  prediction_train_and_test_config.yaml  prediction_train_config.yaml  prediction_with_grl_train_config.yaml  rda_mlm.yaml  rda_mlm_train_config.yaml  rda_pre_train_config.yaml  test_config.yaml  transform_and_fine_tune_config.yaml  transform_and_prediction_train_config.yaml  zheng68k_finetune.yaml  zheng68k_pretrain_random.yaml  zheng68k_pretrain_sorted.yaml
run/data_module/: base_language_modeling.yaml  base_multi_task.yaml  base_seq_cls.yaml  base_seq_labeling.yaml  bulk_rna_labeled.yaml  bulk_rna_unlabeled.yaml  dna_base_seq_cls.yaml  dnaeval_default.yaml  gears.yaml  rda_language_modeling.yaml  scperturb.yaml  zheng68k.yaml  zheng68k_pre_training.yaml
run/fields/: default_fine_tuning.yaml  dna_chunks.yaml  genes_expressions_cve_masked.yaml  genes_expressions_masked.yaml  perturbation.yaml  rda_genes_expressions_masked.yaml
run/label_columns/: default.yaml  grl_default.yaml
run/model/: nystromformer.yaml  performer.yaml  scbert.yaml
run/task/: predict.yaml  test.yaml  train.yaml  train_and_test.yaml
run/tokenizer/: gene2vec.yaml  ref2vec.yaml
run/trainer/: default.yaml  perturbation.yaml
tutorials/RNA/: 0_zero_shot_power_users.ipynb  1_zero_shot_using_yaml.ipynb  2_inference_inspection.ipynb
(+221 files in other folders)
